[feature] mcp-linux-agent