@@ -11,7 +11,7 @@ import org.apache.http.entity.StringEntity;
 import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.client.HttpClients;
 import org.apache.http.util.EntityUtils;
-import  org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpGet;
 
 import java.io.IOException;
 import java.util.Base64;
@@ -26,7 +26,7 @@ public class Gemini {
     private final int gridSize = 100;
 
     public Gemini(String geminiApiBaseUrl, String geminiApiKey, String linuxServerUrl) {
-        this.geminiApiUrl = geminiApiBaseUrl+"/v1beta/models/gemini-1.5-pro-latest:generateContent";
+        this.geminiApiUrl = geminiApiBaseUrl;
         this.geminiApiKey = geminiApiKey;
         this.linuxServerUrl = linuxServerUrl;
     }
@@ -44,13 +44,16 @@ public class Gemini {
             JsonObject jsonResponse = new Gson().fromJson(EntityUtils.toString(entity), JsonObject.class);
             Map<String, String> result = new HashMap<>();
             result.put("data", jsonResponse.get("data").getAsString());
-            result.put("mime_type", jsonResponse.get("mime_type").getAsString()); // Hardcoded for now
+            result.put("mime_type", jsonResponse.get("mime_type").getAsString());
+            result.put("width", jsonResponse.get("width").getAsString());
+            result.put("height", jsonResponse.get("height").getAsString());
             return result;
         } finally {
             response.close();
             httpClient.close();
         }
     }
+
     private Map<String, String> captureGridJpgBase64(int gridNumber) throws IOException {
         CloseableHttpClient httpClient = HttpClients.createDefault();
         HttpGet request = new HttpGet(linuxServerUrl + "/capture_grid?grid=" + gridNumber);
@@ -74,9 +77,9 @@ public class Gemini {
         }
     }
 
-    private  Map<String, Object> getPoint(int gridNumber, int width, int height, int select) {
-        int x = (gridNumber / (int)(Math.ceil((double)height / gridSize))) * gridSize;
-        int y = (gridNumber % (int)(Math.ceil((double)height / gridSize))) * gridSize;
+    private Map<String, Object> getPoint(int gridNumber, int width, int height, int select) {
+        int x = (gridNumber / (int) (Math.ceil((double) height / gridSize))) * gridSize;
+        int y = (gridNumber % (int) (Math.ceil((double) height / gridSize))) * gridSize;
 
         int offx = x;
         int offy = y;
@@ -100,64 +103,11 @@ public class Gemini {
         return result;
     }
 
-    public Map<String, Object> getObjectLocation(String target) throws IOException {
-        Map<String, String> base64Data = captureFullscreenJpgBase64();
-        String base64Str = base64Data.get("data");
-        String mimeType = base64Data.get("mime_type");
-        //构建请求体
-        JsonObject requestBody = new JsonObject();
-        requestBody.addProperty("model", "gemini-2.0-flash-exp");
-
-        JsonArray contents = new JsonArray();
-        contents.add(new Gson().toJsonTree(String.format("请找出包含 '%s' 的网格编号：", target)));
-        contents.add(new Gson().toJsonTree("当前截图："));
-        JsonObject imagePart = new JsonObject();
-        imagePart.addProperty("inlineData", base64Str);
-        contents.add(imagePart);
-        requestBody.add("contents", contents);
-
-        JsonObject config = new JsonObject();
-
-        JsonObject toolConfig = new JsonObject();
-        JsonObject functionCallingConfig = new JsonObject();
-        functionCallingConfig.addProperty("mode", "ANY");
-        toolConfig.add("function_calling_config", functionCallingConfig);
-
-        JsonArray tools = new JsonArray();
-        JsonObject tool = new JsonObject();
-        JsonArray functionDeclarations = new JsonArray();
-        JsonObject functionDeclaration = new JsonObject();
-        functionDeclaration.addProperty("name", "set_grid_number");
-        functionDeclaration.addProperty("description", "包含目标的网格");
-
-        JsonObject parameters = new JsonObject();
-        JsonObject properties = new JsonObject();
-        JsonObject gridNumberParam = new JsonObject();
-        gridNumberParam.addProperty("type", "NUMBER");
-        gridNumberParam.addProperty("description", "网格编号");
-        properties.add("grid_number", gridNumberParam);
-        parameters.add("properties", properties);
-        parameters.addProperty("type", "OBJECT");
-
-        JsonArray requiredParams = new JsonArray();
-        requiredParams.add("grid_number");
-        parameters.add("required", requiredParams);
-
-        functionDeclaration.add("parameters", parameters);
-        functionDeclarations.add(functionDeclaration);
-        tool.add("function_declarations", functionDeclarations);
-        tools.add(tool);
-        toolConfig.add("tools", tools);
-        config.add("tool_config", toolConfig);
-        requestBody.add("config", config);
-        requestBody.addProperty("system_instruction", "找出包含目标的网格编号，然后调用set_grid_number函数指定网格。");
-
-
-        //发起请求
+    private JsonObject callGeminiApi(String requestBody) throws IOException {
         CloseableHttpClient httpClient = HttpClients.createDefault();
-        HttpPost httpPost = new HttpPost(geminiApiUrl + "?key=" + geminiApiKey);
+        HttpPost httpPost = new HttpPost(geminiApiUrl + "/v1beta/models/gemini-2.0-flash:generateContent" + "?key=" + geminiApiKey);
         httpPost.setHeader("Content-Type", "application/json");
-        StringEntity stringEntity = new StringEntity(requestBody.toString(), ContentType.APPLICATION_JSON);
+        StringEntity stringEntity = new StringEntity(requestBody, ContentType.APPLICATION_JSON);
         httpPost.setEntity(stringEntity);
 
         CloseableHttpResponse response = httpClient.execute(httpPost);
@@ -165,146 +115,91 @@ public class Gemini {
         try {
             HttpEntity entity = response.getEntity();
             if (response.getStatusLine().getStatusCode() != 200) {
-                Map<String, Object> errorResult = new HashMap<>();
-                errorResult.put("x", null);
-                errorResult.put("y", null);
-                errorResult.put("error", "Gemini API error: " + EntityUtils.toString(entity));
-                return errorResult;
+                throw new IOException("Gemini API error: " + EntityUtils.toString(entity));
             }
             String responseBody = EntityUtils.toString(entity);
             System.out.println("Response: " + responseBody);
+            return new Gson().fromJson(responseBody, JsonObject.class);
+        } finally {
+            response.close();
+            httpClient.close();
+        }
+    }
 
-            JsonObject jsonResponse = new Gson().fromJson(responseBody, JsonObject.class);
+    public Map<String, Object> getObjectLocation(String target) throws IOException {
+        Map<String, String> base64Data = captureFullscreenJpgBase64();
+        String base64Str = base64Data.get("data");
+        String mimeType = base64Data.get("mime_type");
+        int width = Integer.parseInt(base64Data.get("width")); // Replace with actual width
+        int height = Integer.parseInt(base64Data.get("height")); // Replace with actual height
+        //构建请求体
+        String requestBody = template.formatted("找出包含目标的网格编号，然后调用set_grid_number函数指定网格。",
+                "set_grid_number", "包含目标的网格", "grid_number", "网格编号", "grid_number",
+                "请找出包含 '%s' 的网格编号：".formatted(target), "当前截图", mimeType, base64Str);
 
-            JsonArray candidates = jsonResponse.getAsJsonArray("candidates");
-            if (candidates.size() == 0) {
-                Map<String, Object> errorResult = new HashMap<>();
-                errorResult.put("x", null);
-                errorResult.put("y", null);
-                errorResult.put("error", "No candidates found");
-                return errorResult;
-            }
-            JsonObject firstCandidate = candidates.get(0).getAsJsonObject();
-            JsonObject content = firstCandidate.getAsJsonObject("content");
-            JsonArray parts = content.getAsJsonArray("parts");
+        JsonObject jsonResponse = callGeminiApi(requestBody);
 
-            for (int i = 0; i < parts.size(); i++) {
-                JsonObject part = parts.get(i).getAsJsonObject();
-                if (part.has("functionCall")) {
-                    JsonObject functionCall = part.getAsJsonObject("functionCall");
-                    String functionName = functionCall.get("name").getAsString();
-                    if ("set_grid_number".equals(functionName)) {
-                        int gridNumber = functionCall.getAsJsonObject("args").get("grid_number").getAsInt();
+        JsonArray candidates = jsonResponse.getAsJsonArray("candidates");
+        if (candidates.size() == 0) {
+            Map<String, Object> errorResult = new HashMap<>();
+            errorResult.put("x", null);
+            errorResult.put("y", null);
+            errorResult.put("error", "No candidates found");
+            return errorResult;
+        }
+        JsonObject firstCandidate = candidates.get(0).getAsJsonObject();
+        JsonObject content1 = firstCandidate.getAsJsonObject("content");
+        JsonArray parts1 = content1.getAsJsonArray("parts");
 
-                        Map<String, String> gridImgData = captureGridJpgBase64(gridNumber);
-                        String gridImgBase64 = gridImgData.get("data");
-                        String gridImgMimeType = gridImgData.get("mime_type");
+        for (int i = 0; i < parts1.size(); i++) {
+            JsonObject part = parts1.get(i).getAsJsonObject();
+            if (part.has("functionCall")) {
+                JsonObject functionCall = part.getAsJsonObject("functionCall");
+                String functionName = functionCall.get("name").getAsString();
+                if ("set_grid_number".equals(functionName)) {
+                    int gridNumber = functionCall.getAsJsonObject("args").get("grid_number").getAsInt();
 
-                        //构建请求体
-                        JsonObject requestBody2 = new JsonObject();
-                        requestBody2.addProperty("model", "gemini-2.0-flash-exp");
+                    Map<String, String> gridImgData = captureGridJpgBase64(gridNumber);
+                    String gridImgBase64 = gridImgData.get("data");
+                    String gridImgMimeType = gridImgData.get("mime_type");
 
-                        JsonArray contents2 = new JsonArray();
-                        contents2.add(new Gson().toJsonTree(String.format("请定位出可以点击到 '%s' 的点：",target)));
-                        contents2.add(new Gson().toJsonTree("局部截图："));
-                        JsonObject imagePart2 = new JsonObject();
-                        imagePart2.addProperty("inlineData", gridImgBase64);
-                        contents2.add(imagePart2);
-                        requestBody2.add("contents", contents2);
+                    String requestBody2 = template.formatted("找出请找出可以点击到目标的点的编号，然后调用set_point_number函数指定该点。",
+                            "set_point_number", "可以点击到目标的点", "point_number", "点编号", "point_number",
+                            "请定位出可以点击到 '%s' 的点：".formatted(target), "局部截图", gridImgMimeType, gridImgBase64);
 
-                        JsonObject config2 = new JsonObject();
-                        JsonObject toolConfig2 = new JsonObject();
-                        JsonObject functionCallingConfig2 = new JsonObject();
-                        functionCallingConfig2.addProperty("mode", "ANY");
-                        toolConfig2.add("function_calling_config", functionCallingConfig2);
+                    JsonObject jsonResponse2 = callGeminiApi(requestBody2);
 
-                        JsonArray tools2 = new JsonArray();
-                        JsonObject tool2 = new JsonObject();
+                    JsonArray candidates2 = jsonResponse2.getAsJsonArray("candidates");
 
-                        JsonArray functionDeclarations2 = new JsonArray();
-                        JsonObject functionDeclaration2 = new JsonObject();
-                        functionDeclaration2.addProperty("name", "set_point_number");
-                        functionDeclaration2.addProperty("description", "以点击到目标的点");
-                        JsonObject parameters2 = new JsonObject();
-                        JsonObject properties2 = new JsonObject();
-                        JsonObject pointNumberParam = new JsonObject();
-                        pointNumberParam.addProperty("type", "NUMBER");
-                        pointNumberParam.addProperty("description", "点编号");
-                        properties2.add("point_number", pointNumberParam);
-                        parameters2.add("properties", properties2);
-                        parameters2.addProperty("type", "OBJECT");
-                        JsonArray required2 = new JsonArray();
-                        required2.add("point_number");
-                        parameters2.add("required", required2);
-                        functionDeclaration2.add("parameters", parameters2);
-                        functionDeclarations2.add(functionDeclaration2);
-                        tool2.add("function_declarations", functionDeclarations2);
-                        tools2.add(tool2);
-                        toolConfig2.add("tools", tools2);
-                        config2.add("tool_config", toolConfig2);
-                        requestBody2.add("config", config2);
-                        requestBody2.addProperty("system_instruction", "找出请找出可以点击到目标的点的编号，然后调用set_point_number函数指定该点。");
+                    if (candidates2.size() == 0) {
+                        Map<String, Object> errorResult = new HashMap<>();
+                        errorResult.put("x", null);
+                        errorResult.put("y", null);
+                        errorResult.put("error", "No candidates found in the second response");
+                        return errorResult;
+                    }
 
-                        //发起请求
-                        CloseableHttpClient httpClient2 = HttpClients.createDefault();
-                        HttpPost httpPost2 = new HttpPost(geminiApiUrl + "?key=" + geminiApiKey);
-                        httpPost2.setHeader("Content-Type", "application/json");
-                        StringEntity stringEntity2 = new StringEntity(requestBody2.toString(), ContentType.APPLICATION_JSON);
-                        httpPost2.setEntity(stringEntity2);
-                        CloseableHttpResponse response2 = httpClient2.execute(httpPost2);
+                    JsonObject firstCandidate2 = candidates2.get(0).getAsJsonObject();
+                    JsonObject content3 = firstCandidate2.getAsJsonObject("content");
+                    JsonArray parts3 = content3.getAsJsonArray("parts");
 
-                        try {
-                            HttpEntity entity2 = response2.getEntity();
-                            if (response2.getStatusLine().getStatusCode() != 200) {
-                                Map<String, Object> errorResult = new HashMap<>();
-                                errorResult.put("x", null);
-                                errorResult.put("y", null);
-                                errorResult.put("error", "Gemini API error: " + EntityUtils.toString(entity2));
-                                return errorResult;
+                    for (int j = 0; j < parts3.size(); j++) {
+                        JsonObject part2 = parts3.get(j).getAsJsonObject();
+                        if (part2.has("functionCall")) {
+                            JsonObject functionCall2 = part2.getAsJsonObject("functionCall");
+                            String functionName2 = functionCall2.get("name").getAsString();
+                            if ("set_point_number".equals(functionName2)) {
+                                int pointNumber = functionCall2.getAsJsonObject("args").get("point_number").getAsInt();
+                                // Assuming you have width and height from somewhere, like the initial image
+                                // For demonstration, let's assume you have them
+                                // You might need to get them from the initial image response or pass them as parameters
+
+                                return getPoint(gridNumber, width, height, pointNumber);
                             }
-                            String responseBody2 = EntityUtils.toString(entity2);
-                            System.out.println("Response2: " + responseBody2);
-                            JsonObject jsonResponse2 = new Gson().fromJson(responseBody2, JsonObject.class);
-                            JsonArray candidates2 = jsonResponse2.getAsJsonArray("candidates");
-
-                            if(candidates2.size() == 0){
-                                Map<String, Object> errorResult = new HashMap<>();
-                                errorResult.put("x", null);
-                                errorResult.put("y", null);
-                                errorResult.put("error", "No candidates found in the second response");
-                                return errorResult;
-                            }
-
-                            JsonObject firstCandidate2 = candidates2.get(0).getAsJsonObject();
-                            JsonObject content2 = firstCandidate2.getAsJsonObject("content");
-                            JsonArray parts2 = content2.getAsJsonArray("parts");
-
-                            for (int j = 0; j < parts2.size(); j++) {
-                                JsonObject part2 = parts2.get(j).getAsJsonObject();
-                                if (part2.has("functionCall")) {
-                                    JsonObject functionCall2 = part2.getAsJsonObject("functionCall");
-                                    String functionName2 = functionCall2.get("name").getAsString();
-                                    if ("set_point_number".equals(functionName2)) {
-                                        int pointNumber = functionCall2.getAsJsonObject("args").get("point_number").getAsInt();
-                                        // Assuming you have width and height from somewhere, like the initial image
-                                        // For demonstration, let's assume you have them
-                                        // You might need to get them from the initial image response or pass them as parameters
-                                        int width = 1920; // Replace with actual width
-                                        int height = 1080; // Replace with actual height
-                                        return getPoint(gridNumber, width, height, pointNumber);
-                                    }
-                                }
-                            }
-                        } finally {
-                            response2.close();
-                            httpClient2.close();
                         }
                     }
                 }
             }
-        } finally {
-            response.close();
-            httpClient.close();
         }
         Map<String, Object> errorResult = new HashMap<>();
         errorResult.put("x", null);
@@ -312,4 +207,59 @@ public class Gemini {
         errorResult.put("error", "Not Found");
         return errorResult;
     }
+
+    private final String template = """
+            {
+                "system_instruction": {
+                    "parts": {
+                        "text": "%s"
+                    }
+                },
+                "tools": [
+                    {
+                        "function_declarations": [
+                            {
+                                "name": "%s",
+                                "description": "%s",
+                                "parameters": {
+                                    "type": "object",
+                                    "properties": {
+                                        "%s": {
+                                            "type": "number",
+                                            "description": "%s"
+                                        }
+                                    },
+                                    "required": [
+                                        "%s"
+                                    ]
+                                }
+                            }
+                        ]
+                    }
+                ],
+                "tool_config": {
+                    "function_calling_config": {
+                        "mode": "any"
+                    }
+                },
+                "contents": [
+                    {
+                        "parts": [
+                            {
+                                "text": "%s"
+                            },
+                            {
+                                "text": "%s"
+                            },
+                            {
+                                "inline_data": {
+                                    "mime_type": "%s",
+                                    "data": "%s"
+                                }
+                            }
+                        ]
+                    }
+                ]
+            }
+            """;
 }
